Fix mobile-menu set z-index

--- a/src/css/mobile-menu.css
+++ b/src/css/mobile-menu.css
@@ -1,4 +1,5 @@
 .mobile-menu {
+  z-index: 5;
   position: fixed;
   inset: 0;
   transform: translateY(100%);
